<resources>

    <string-array name="symptoms_array">
        <item>Ayam bersin</item>
        <item>Ayam batuk</item>
        <item>Ayam mengap-mengap</item>
        <item>Ayam tampak lesu</item>
        <item>Badan ayam bergetar</item>
        <item>Badan lemah</item>
        <item>Bulu tampak jatuh ke bawah</item>
        <item>Diare</item>
        <item>Diare kehijauan</item>
        <item>Jengger berwarna keabuan</item>
        <item>Keluar lendir pada hidung</item>
        <item>Kotoran berwarna putih</item>
        <item>Leleran di hidung</item>
        <item>Lesu</item>
        <item>Lumpuh karena athritis</item>
        <item>Mata berair</item>
        <item>Napsu makan menurun</item>
        <item>Napsu makan pada ayam menurun</item>
        <item>Napsu makan dan Berat badan turun drastis</item>
        <item>Napas mengih-mengih</item>
        <item>Ngorok basah</item>
        <item>Pembengkakan di sinus</item>
        <item>Pembengkakan di daerah mata dan muka</item>
        <item>Produksi telur menurun</item>
        <item>Sayap menggantung dan lemas</item>
        <item>Sinusitis</item>
        <item>Tubuh ayam bergetar</item>
        <item>Terjadi pembengkakan di daerah mata dan muka</item>
    </string-array>


    <string name="app_name">AplikasiPakarAyam</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="title">Sistem Pakar Ayam</string>
    <string name="desc">Cek gejala di app ini</string>
    <string name="login">LOGIN</string>
    <string name="guests">Anda seorang tamu?</string>
    <string name="klik_disini">klik disini.</string>
    <string name="enter_username_or_email">Enter username or email</string>
    <string name="enter_password">Enter password</string>
    <string name="guest_button">Masuk sebagai TAMU</string>
    <string name="Bantuan">Bantuan</string>
    <string name="gejala">Gejala</string>
    <string name="tentang">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eleifend eros ante. Proin a metus ligula. Mauris fermentum purus sed nunc volutpat tempor. Aliquam eu congue tortor. Curabitur efficitur libero vel ante blandit pretium. Morbi fringilla et dui a vestibulum. Suspendisse ac fermentum risus. Ut nec ante semper, hendrerit augue quis, ornare ante. Fusce ante tellus, porta non sagittis vitae, tincidunt et quam.\n\nNunc nibh lectus, varius non mollis sit amet, tempus quis sapien. Cras at neque id tortor tempor bibendum. Phasellus hendrerit neque id leo feugiat, quis tristique elit efficitur. Integer venenatis non lectus vel dignissim. Sed maximus vestibulum nibh, ut scelerisque purus blandit sit amet. Nulla commodo vehicula ligula, id convallis ex aliquet in. Suspendisse pellentesque dolor ut placerat commodo. Morbi luctus, mauris iaculis aliquet pellentesque, ligula diam pellentesque metus, eget venenatis ex velit eu odio. Sed nunc felis, facilisis non finibus a, ullamcorper vel elit. Sed sit amet consectetur odio, non tincidunt augue. Etiam eu nibh enim.\n\nVestibulum ipsum ligula, tincidunt at laoreet a, tempor at justo. Pellentesque sed velit dui. Proin ac enim sit amet elit aliquam convallis. Fusce suscipit iaculis augue et scelerisque. Duis odio elit, suscipit non lorem ut, tincidunt placerat mauris. Etiam fringilla porttitor faucibus. Vivamus scelerisque tortor at sapien commodo, at iaculis nibh dignissim. Maecenas mattis sit amet turpis in euismod. Vestibulum et sem a neque semper facilisis ut et magna. Nulla scelerisque vulputate metus. Etiam porta ex sit amet ipsum dignissim fringilla.\n\nQuisque vel massa a elit pulvinar pretium quis eu nisl. Ut dictum nec orci ut tempor. Nunc molestie sapien eu mi ultricies molestie. Proin at ultricies diam, vitae mattis diam. Aliquam rutrum risus turpis, eu consequat nunc tempor eu. Fusce hendrerit sit amet justo sed rutrum. Vivamus sit amet orci consequat, pellentesque urna ut, porta sem. Pellentesque pulvinar augue vitae aliquet lobortis. Nullam lobortis maximus erat, a ultricies est tempor sit amet. Integer scelerisque, ante non gravida malesuada, diam nibh pellentesque velit, eget vehicula nunc tortor non quam. Phasellus cursus finibus vehicula. Vivamus quam leo, viverra vitae interdum at, elementum nec nisi. Curabitur rhoncus tristique tortor quis condimentum. Phasellus non volutpat risus, quis bibendum neque. Praesent finibus, dui ut commodo aliquet, nibh enim varius magna, at malesuada ligula risus sit amet lectus.</string>
    <string name="deskripsi">Dalam Aplikasi Pakar Ayam, Anda akan menemukan berbagai fitur dan informasi berguna yang dapat membantu Anda menjadi seorang pakar dalam beternak ayam. Mulai dari tips perawatan harian, nutrisi yang tepat, pengendalian penyakit, hingga panduan dalam memilih jenis-jenis ayam yang cocok untuk kebutuhan Anda.</string>
</resources>