<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.NoTitleBar"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="62dp"
        android:layout_height="58dp"
        android:layout_marginEnd="376dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285"
        app:srcCompat="@drawable/rounded_button"
        tools:ignore="MissingConstraints,ImageContrastCheck,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="11dp"
        android:layout_height="12dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        app:srcCompat="@drawable/rounded_button"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="181dp"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Desc"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/username_email"
            android:textColor="#808080"
            android:textSize="15sp"
            android:textStyle="normal"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/rounded_input"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_username_or_email"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#808080"
            android:textSize="12sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/password"
            android:textColor="#808080"
            android:textSize="15sp"
            android:textStyle="normal"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/rounded_input"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_password"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#808080"
            android:textSize="12sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/Desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/desc"
        android:textColor="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="71dp"
        android:layout_height="69dp"
        android:layout_marginStart="368dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:srcCompat="@drawable/rounded_button"
        tools:ignore="MissingConstraints,ImageContrastCheck,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="47dp"
        android:layout_height="42dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"
        app:srcCompat="@drawable/rounded_button"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="58dp"
        android:layout_height="59dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/rounded_button"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="27dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        app:srcCompat="@drawable/rounded_button"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <Button
        android:id="@+id/buttonGuest"
        android:layout_width="329dp"
        android:layout_height="59dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/rounded"
        android:text="@string/guest_button"
        android:textColor="#000000"
        android:textColorLink="#12CBC4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="#12CBC4"
        tools:ignore="MissingConstraints,VisualLintButtonSize,TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="329dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded_yellow"
        android:backgroundTint="#79E0EE"
        android:text="@string/login"
        android:textColor="#000000"
        android:textColorLink="#FFFF00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:rippleColor="#FFFF00"
        tools:ignore="MissingConstraints,VisualLintButtonSize,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="146dp"
        android:layout_height="148dp"
        android:layout_marginTop="44dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>